# internal/routes/routes.go
@@ -33,6 +33,8 @@ func NewRoutes() *chi.Mux {
 
 	r.With(appmw.Authenticated).Post("/transactions/transfer", handlers.TransferHandler)
 
+	r.With(appmw.Authenticated).Post("/transactions/exchange", handlers.ExchangeHandler)
+
 	r.With(appmw.Authenticated).Get("/ledger", handlers.LedgerEntriesHandler)
 
 	r.Get("/swagger/*", httpSwagger.WrapHandler)
